# tauri-template-app

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx  index.css  main.tsx  styles.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  lib.rs  logging.rs  main.rs  settings.rs
src-tauri/src/commands/: log.rs  mod.rs  settings.rs  window.rs
src/i18n/: index.ts
src/i18n/locales/: en.json  zh.json
src/stores/: langStore.ts  themeStore.ts
src/types/: index.ts
