[package]
name = "tauri-template-app"
version = "0.1.0"
edition = "2024"
description = "A generic Tauri 2 + React 19 desktop application template"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
window-vibrancy = "0.5"

# Logging & tracing
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-log = "0.2"

# Database — key-value config & log storage
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }

e-utils = { version = "0.3", features = ["algorithm", "macros"] }

[features]
